--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "ajv",
+  "name": "vtex.ajv",
   "version": "6.10.0",
-  "description": "Another JSON Schema Validator",
+  "description": "Another JSON Schema Validator: forked at jeymisson/ajv",
   "main": "lib/ajv.js",
   "typings": "lib/ajv.d.ts",
   "files": [
@@ -23,9 +23,7 @@
     "bundle": "del-cli dist && node ./scripts/bundle.js . Ajv pure_getters",
     "bundle-beautify": "node ./scripts/bundle.js js-beautify",
     "build": "del-cli lib/dotjs/*.js \"!lib/dotjs/index.js\" && node scripts/compile-dots.js",
-    "test-karma": "karma start",
-    "test-browser": "del-cli .browser && npm run bundle && scripts/prepare-tests && npm run test-karma",
-    "test-all": "npm run test-ts && npm run test-cov && if-node-version 10 npm run test-browser",
+    "test-all": "npm run test-ts && npm run test-cov",
     "test": "npm run lint && npm run build && npm run test-all",
     "prepublish": "npm run build && npm run bundle",
     "watch": "watch \"npm run build\" ./lib/dot"
@@ -42,7 +40,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/epoberezkin/ajv.git"
+    "url": "https://github.com/jeymisson/ajv.git"
   },
   "keywords": [
     "JSON",
